Fix centering on mobile zoom

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     padding: 0;
     position: relative;
     overflow: hidden;
+    width: 100%;
 }
 
 @media (min-width: 768px) {
